# opengl-template

./: CMakeLists.txt  flake.nix
src/: main.cpp
